# vimeo-dl

./: .gitignore  LICENCE  Pipfile  README-PYPI.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml
examples/: embed_only_videos.py  multiple_videos.py
tests/: test_vimeo_downloader.py
vimeo_downloader/: __init__.py
vimeo_downloader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
